--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -17,8 +17,8 @@
   }
   
   .product img {
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     border-radius: 8px;
     margin-bottom: 0.3rem;
     margin-top: 0;
@@ -28,7 +28,7 @@
     font-size: 1.2rem;
     color: #333;
     margin-bottom: 0.5rem;
-    margin-top: 0;
+    margin-top: 1rem;
   }
   
   .product p {
